# wat

./: Cargo.toml  README.md  empty
.cargo/: .config
.github/: pull_request_template.md
.github/ISSSUE_TEMPLATE/: bug.yml
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: commands.yml  rust-clippy.yml
src/: analyzer.rs  main.rs  tests.rs  types.rs  utils.rs
src/analyzers/: mod.rs
src/analyzers/basic/: mod.rs
src/analyzers/bom/: mod.rs
src/analyzers/bytes_distribution/: mod.rs
src/analyzers/file_mime_type/: mime_types.rs  mod.rs  mz_mime_type_handler.rs
