[package]
name = "wat"
version = "0.0.1"
edition = "2021"

[dependencies]
async-trait = { version = "0.1.73" }
binary-layout = { version = "3.2.0" }
bytecount = { version = "0.6.3" }
clap = { version = "4.3.23", features = ["derive", "suggestions", "color", "wrap_help"] }
color-eyre = { version = "0.6.2" }
colored = { version = "2.0.4" }
exitcode = { version = "1.1.2" }
eyre = { version = "0.6.8" }
futures = { version = "0.3.28" }
human-panic = { version = "1.1.5" }
human-repr = { version = "1.1.0", features = ["iec", "space"] }
inventory = { version = "0.3.11" }
textplots = { version = "0.8.0" }
memmap2 = { version = "0.7.1" }
tabled = { version = "0.14.0", features = ["color"] }
terminal_size = { version = "0.2.6" }
tokio = { version = "1.32.0", features = ["full"] }
phf = { version = "0.11.2", features = ["macros"] }
enum-display = { version = "0.1.3" }

[features]
runtime-dispatch-simd = ["bytecount/runtime-dispatch-simd"]
generic-simd = ["bytecount/generic-simd"]
default = ["generic-simd"]

[profile.dev]
opt-level = 0
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = "off"
incremental = true
panic = "unwind"

[profile.release]
opt-level = 3
debug-assertions = false
overflow-checks = false
lto = "fat"
