[package]
name = "wat"
version = "0.0.1"
edition = "2021"

[dependencies]
async-trait = { version = "0.1.77" }
binary-layout = { version = "3.2.0" }
bytecount = { version = "0.6.7" }
clap = { version = "4.4.14", features = ["derive", "suggestions", "color", "wrap_help"] }
color-eyre = { version = "0.6.2" }
colored = { version = "2.1.0" }
exitcode = { version = "1.1.2" }
eyre = { version = "0.6.11" }
futures = { version = "0.3.30" }
human-panic = { version = "1.2.2" }
human-repr = { version = "1.1.0", features = ["iec", "space"] }
inventory = { version = "0.3.14" }
textplots = { version = "0.8.4" } # TODO: Move to something more flexible (lowcharts, histo, wagashi probably)
lowcharts = { version = "0.5.8" }
bwdraw = { version = "0.1.2" }
memmap2 = { version = "0.9.3" }
terminal_size = { version = "0.3.0" }
tokio = { version = "1.35.1", features = ["full"] }
phf = { version = "0.11.2", features = ["macros"] }
enum-display = { version = "0.1.3" }

[features]
runtime-dispatch-simd = ["bytecount/runtime-dispatch-simd"]
generic-simd = ["bytecount/generic-simd"]
# default = ["generic-simd"]
default = ["runtime-dispatch-simd"]

[profile.dev]
opt-level = 0
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = "off"
incremental = true
panic = "unwind"

[profile.release]
opt-level = 3
debug-assertions = false
overflow-checks = false
lto = "fat"
